Checkpoint of survey work
